--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MicrosoftAppId=3d1198e4-6ba3-40db-8093-5da0c0b9cba8
 MicrosoftAppPassword=d2X@%JXN[k6e:YM0iGR))-y+J5KrNn
+MicrosoftAppSecretKey=_ciBUwYtJfI.9i7cb84xyakEDE1-JvYw0HExEmrfXW3q2jg2qhKQ4wQ
 ScmType=None
